cmake_minimum_required(VERSION 3.9)
project(sandbox)

set(CMAKE_CXX_STANDARD 11)
set(Boost_USE_MULTITHREAD ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../build)

find_package(Boost COMPONENTS REQUIRED system filesystem program_options)
find_package(SDL2 REQUIRED sdl2)

add_executable(sandbox main.cpp command_line_options.cpp command_line_options.hpp)

if (Boost_FOUND)
    message("-- Boost Include Directory: " ${Boost_INCLUDE_DIR})
    message("--   Version: " ${Boost_VERSION})
    message("--   Boost Include Directory: " ${Boost_INCLUDE_DIR})
    include_directories(${Boost_INCLUDE_DIR})
    target_link_libraries(sandbox ${Boost_LIBRARIES})
endif()

if (SDL2_FOUND)
    message("-- SDL Include Directory: " ${SDL2_INCLUDE_DIR})
    message("--   SDL2 Include Directory: " ${SDL2_INCLUDE_DIR})
    include_directories(${SDL2_INCLUDE_DIR})
    target_link_libraries(sandbox ${SDL2_LIBRARY})
endif()
